Fix spacing in sidebar menu

--- a/src/components/utils/styles/subsocial.css
+++ b/src/components/utils/styles/subsocial.css
@@ -955,12 +955,6 @@ hr {
   }
 }
 
-.ant-menu-inline {
-  .ant-menu-item:not(:last-child) {
-    margin-bottom: 4px;
-  }
-}
-
 .ui.segment {
   background-color: #fff;
 }
@@ -1045,6 +1039,10 @@ hr {
   overflow: hidden;
   height: 100vh;
   left: 0;
+
+  .ant-menu-item:not(:last-child) {
+    margin-bottom: 4px;
+  }
 }
 
 .ant-layout-sider-children {
